--- a/Redes1/slides/index.html
+++ b/Redes1/slides/index.html
@@ -7,10 +7,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Redes definidas por software</title>
+	<title>Redes TCP/IP</title>
 	
 	<!-- Core and extension CSS files -->
 	<link rel="stylesheet" href="../core/deck.core.css">
+	<link rel="stylesheet" href="../extensions/menu/deck.menu.css">
+	<link rel="stylesheet" href="../extensions/goto/deck.goto.css">
+	<link rel="stylesheet" href="../extensions/navigation/deck.navigation.css">
 	<link rel="stylesheet" href="../extensions/status/deck.status.css">
 	
 	
@@ -30,9 +33,9 @@
 	<h1>Redes TCP/IP</h2>
 </section>
 
-<section class="slide">
+<section class="slide" id="history-network1">
 	<h2>A origem da rede de computadores</h2>
-	<br\>
+	<br/>
 	<h3 class="slide">Até a década de 50:</h3>
 	<ul>
 	  <li class="slide">Supercomputadores enormes</li>
@@ -45,6 +48,10 @@
 	  <li class="slide">Processamento batch de atividades</li>
 	  <li class="slide">Protocolo X.25</li>
 	</ul>
+</section>
+<section class="slide" id="history-network2">
+    <h2>A origem da rede de computadores (cont)</h2>
+    <br/>
 	<h3 class="slide">Na década de 80:</h3>
 	<ul>
 	  <li class="slide">Surgimento da computação pessoal</li>
@@ -54,11 +61,62 @@
 	</ul>
 </section>
 
+<section class="slide" id="Modelo-OSI">
+    <h2> Modelo de camadas OSI</h2>
+    <br/>
+    <ul>
+      <li class="slide"> Criado para padronização entre comunicação de redes</li>
+      <li class="slide"> Facilita a abstração de intercomunicação entre os protocolos de rede</li>
+      <li class="slide"> Modelo apenas teórico, não corresponde fielmente a realidade</li>
+    </ul>
+    <h2> Modelo de camadas TCP/IP</h2>
+    <br/>
+    <ul>
+      <li class="slide"> Baseado no modelo OSI com objetivo de modelar a comunicação entre os protocoos da Internet</li>
+    </ul>
+</section>
+
+<section class="slide" id="OSI/TCP">
+    <h2> Comparação entre modelo OSI e TCP/IP</h2>
+    <table class="table-left">
+        <tr><th>Modelo OSI</th></tr>
+        <tr><td>Aplicação</td></tr>
+        <tr><td>Apresentação</td></tr>
+        <tr><td>Sessão</td></tr>
+        <tr><td>Transporte</td></tr>
+        <tr><td>Rede</td></tr>
+        <tr><td>Enlace</td></tr>
+        <tr><td>Física</td></tr>
+    </table>
+    <table class="table-right">
+        <tr><th>Modelo TCP/IP</th></tr>
+        <tr><td><br/>Aplicação<br/><br/></td></tr>
+        <tr><td>Transporte</td></tr>
+        <tr><td>Rede</td></tr>
+        <tr><td>Física</td></tr>
+        <tr><td>Comunicação com o Gateway</td></tr>
+    </table>
+</section>
+
+<section class="slide" id="Protocolo-TCP/IP">
+    <h2>Protocolo TCP/IP</h2>
+    <br/>
+    <p>Na verdade são dois protocolos que funcionam em conjunto, o protocolo TCP (Transmission Control Protocol) funciona na camada de Transporte especificanado como a transmissão dos pacotes serão dadas. O outro protocolo é o IP (Internet Protocol), funciona na camada de Rede e serve para identificação das máquinas no momento da comunicação.</p>
+</section>
+
+<a href="#" class="deck-prev-link" title="Previous">&#8592;</a>
+<a href="#" class="deck-next-link" title="Next">&#8594;</a>
+
 <p class="deck-status">
-	<span class="deck-status-current"></span>/
 	<span class="deck-status-total"></span>
 </p>
 
+<form action="." method="get" class="goto-form">
+	<label for="goto-slide">Go to slide:</label>
+	<input type="text" name="slidenum" id="goto-slide" list="goto-datalist">
+	<datalist id="goto-datalist"></datalist>
+	<input type="submit" value="Go">
+</form>
 
   <!-- Grab CDN jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js"></script>
@@ -66,7 +124,10 @@
 
 <!-- Deck Core and extensions -->
 <script src="../core/deck.core.js"></script>
+<script src="../extensions/menu/deck.menu.js"></script>
+<script src="../extensions/goto/deck.goto.js"></script>
 <script src="../extensions/status/deck.status.js"></script>
+<script src="../extensions/navigation/deck.navigation.js"></script>
 
 <!-- Specific to this page -->
 <script src="introduction.js"></script>
